<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_search">

    <fragment
        android:id="@+id/nav_search"
        android:name="com.android.moviesapp.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" >

        <action
            android:id="@+id/action_search_to_movie"
            app:destination="@id/nav_movie" />

    </fragment>

    <fragment
        android:id="@+id/nav_home"
        android:name="com.android.moviesapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >

        <action
            android:id="@+id/action_home_to_movies"
            app:destination="@id/nav_movies"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim" />
        <action
            android:id="@+id/action_home_to_movies_by_genre"
            app:destination="@id/nav_movies_by_genre" />

    </fragment>

    <fragment
        android:id="@+id/nav_movies"
        android:name="com.android.moviesapp.ui.home.HomeMoviesFragment"
        android:label="Movies"
        tools:layout="@layout/fragment_home_movies">

        <action
            android:id="@+id/action_movies_to_movie"
            app:destination="@id/nav_movie" />

    </fragment>

    <fragment
        android:id="@+id/nav_watch_list"
        android:name="com.android.moviesapp.ui.watchlist.WatchListFragment"
        android:label="@string/title_watch_list"
        tools:layout="@layout/fragment_watch_list" >

        <action
            android:id="@+id/action_watch_to_movie"
            app:destination="@id/nav_movie" />

    </fragment>

    <fragment
        android:id="@+id/nav_movie"
        android:name="com.android.moviesapp.ui.movie.MovieFragment"
        android:label="Movie"
        tools:layout="@layout/fragment_movie" />

    <fragment
        android:id="@+id/nav_movies_by_genre"
        android:name="com.android.moviesapp.ui.home.HomeMoviesByGenreFragment"
        android:label="fragment_home_movies_by_genre"
        tools:layout="@layout/fragment_home_movies_by_genre" >

        <action
            android:id="@+id/action_movies_by_genre_to_movie"
            app:destination="@id/nav_movie" />

    </fragment>

</navigation>