<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeMoviesFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/movies_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        style="@style/themeToolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/categories" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/movies_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movies_toolbar" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/movies_snack_bar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movies_toolbar">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/movies_swipe"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/movies_recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/recycler" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <LinearLayout
        android:id="@+id/movies_message_error"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movies_toolbar">

        <TextView
            style="@style/themeMessage"
            android:text="@string/message_error"
            app:drawableTopCompat="@drawable/ic_wifi_error" />

        <Button
            android:id="@+id/movies_btn_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repeat" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

